Replaced everything with proper logging.